# stm32l0x1-hal

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config
src/: adc.rs  delay.rs  flash.rs  gpio.rs  lib.rs  power.rs  time.rs  timer.rs
src/i2c/: mod.rs  stm32l011x3_4.rs  stm32l031x4_6.rs
src/rcc/: clocking.rs  mod.rs
src/serial/: mod.rs  stm32l011k4.rs  stm32l011x3_4.rs  stm32l031x4_6.rs
