[package]
authors = ["Brandon Matthews <bmatthews@zipcar.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for STM32L0x1 microcontrollers"
keywords = ["arm", "cortex-m", "stm32l0x1", "hal"]
license = "0BSD"
name = "stm32l0x1-hal"
repository = "https://github.com/thenewwazoo/stm32l0x1-hal/"
version = "0.8.0"

[dependencies]
cortex-m = "0.5"
nb = "0.1"
stm32l0x1 = "0.13"
flash-embedded-hal = "0"

[dependencies.cast]
version = "0.2.2"
default-features = false

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"

[dependencies.void]
default-features = false
version = "1.0.2"

[features]
STM32L011x3 = []
STM32L011x4 = []
STM32L031x4 = []
STM32L031x6 = []
default = ["rt"]
rt = ["stm32l0x1/rt"]
