[package]
authors = ["Brandon Matthews <bmatthews@zipcar.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for STM32L0x1 microcontrollers"
keywords = ["arm", "cortex-m", "stm32l0x1", "hal"]
license = "0BSD"
name = "stm32l0x1-hal"
repository = "https://github.com/thenewwazoo/stm32l0x1-hal/"
version = "0.9.0"

[dependencies]
cortex-m = "0.6.3"
nb = "1.0"
flash-embedded-hal = "0"
embedded-hal = "1.0.0-alpha.1"

[dependencies.stm32l0]
version = "0.11.0"
features = ["stm32l0x1", "rt"]

[dependencies.cast]
version = "0.2.2"
default-features = false

[features]
STM32L011x3 = []
STM32L011x4 = []
STM32L031x4 = []
STM32L031x6 = []
default = ["rt"]
rt = ["stm32l0/rt"]
