[package]
authors = ["Brandon Matthews <thenewwazoo@optimaltour.us>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for STM32L0x1 microcontrollers"
keywords = ["arm", "cortex-m", "stm32l0x1", "hal"]
license = "0BSD"
name = "stm32l0x1-hal"
repository = "https://github.com/thenewwazoo/stm32l0x1-hal/"
version = "0.11.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.2"
nb = "1.0"
flash-embedded-hal = "0"

[dependencies.void]
version = "1.0.2"
default-features = false

[dependencies.embedded-hal]
version = "0.2.7"
features = ["unproven"]

[dependencies.stm32l0]
version = "0.15.1"
features = ["stm32l0x1", "rt"]

[dependencies.cast]
version = "0.3.0"
default-features = false

[features]
STM32L011x3 = []
STM32L011x4 = []
STM32L031x4 = []
STM32L031x6 = []
default = ["rt"]
rt = ["stm32l0/rt"]
